# cm-pytest-book

./: .gitignore
cards_proj/: README.txt  pyproject.toml
ch1/: test_one.py  test_two.py
ch10/: test_cli.py  test_cli_alt.py  test_mock.py  test_typer_testing.py
ch10/exercises/: my_info.py  test_my_info.py
ch11/cards_proj/: pyproject.toml  pytest.ini  tox.ini  tox_coverage.ini  tox_coverage_min.ini  tox_multiple_Pythons.ini  tox_posargs.ini
ch11/exercises/: test_hello.py  tox.ini
ch12/app/: tox.ini
ch12/exercises/: sums.py
ch12/script/: test_hello.py  tox.ini  tox_bad.ini
ch12/script_funcs/: test_hello.py  tox.ini
ch12/script_importable/: hello.py  test_hello.py
ch12/script_src/: tox_fixed.ini
ch2/: test_alt_fail.py  test_card.py  test_card_fail.py  test_card_mod.py  test_classes.py  test_exceptions.py  test_experiment.py  test_helper.py  test_outcomes.py  test_structure.py
ch3/: test_count.py  test_fixtures.py  test_mod_scope.py  test_rename_2.py  test_rename_fixture.py
ch3/a/: conftest.py
ch3/b/: conftest.py  test_count.py  test_three.py
ch3/c/: conftest.py
ch3/d/: conftest.py  test_count.py  test_some.py  test_three.py
ch4/: conftest.py  conftest_from_ch3.py  hello_world.py  test_config.py  test_print.py  test_tmp.py  test_version.py
ch5/: test_finish.py  test_finish_combined.py  test_fix_param.py  test_func_param.py  test_gen.py
ch6/bad/: pytest.ini  test_finish.py
ch6/builtins/: test_less_than.py  test_skip.py  test_skipif.py  test_xfail.py
ch6/combined/: conftest.py  pytest.ini  (+2 more)
ch8/: test_add.py
ch9/: single_file.py
(+35 files in other folders)
